# programmable-vi-pldi-2024

./: .flake8  .gitignore  Dockerfile  README.md  experiments.ipynb  extending_our_work.ipynb  justfile  noxfile.py  pyproject.toml
adevjax/: PKG-INFO  README.md  pyproject.toml
adevjax/adevjax/: __init__.py  console.py  core.py  hashable_dict.py  interpreter.py  pretty_printing.py  primitives.py  pytree.py  staging.py  typing.py
animations/: air_animations_enum.ipynb  air_animations_mvd.ipynb  air_animations_reinforce.ipynb  animations.ipynb  animations_with_flip.ipynb
experiments/fig_2_noisy_cone/: genjax_cone.py  genjax_cone_marginal.py
experiments/fig_7_air_estimator_evaluation/: air_analysis.py  genjax_enum_air.py  genjax_hybrid_air.py  genjax_mvd_air.py  genjax_reinforce_air.py  genjax_rws_air.py  pyro_baselines_air.py  pyro_reinforce_air.py  pyro_rws_air.py
experiments/fig_7_air_estimator_evaluation/pyro_air/: README.md  __init__.py  modules.py  util.py
experiments/table_1_minibatch_gradient_benchmark/: genjax_vae_overhead.py
experiments/table_2_benchmark_timings/: README.md  test_genjax_baseline_air_benchmark.py  test_genjax_enum_air_benchmark.py  test_genjax_iwae_mvd_air_benchmark.py  test_genjax_iwae_reinforce_air_benchmark.py  test_genjax_iwae_vae_benchmark.py  test_genjax_mvd_air_benchmark.py  test_genjax_reinforce_air_benchmark.py  test_genjax_vae_benchmark.py  test_numpyro_iwae_vae_benchmark.py  test_numpyro_vae_benchmark.py  test_pyro_air_benchmark.py  test_pyro_iwae_vae_benchmark.py  test_pyro_reinforce_air_benchmark.py  test_pyro_rws_vae_benchmark.py  test_pyro_vae_benchmark.py
experiments/table_2_benchmark_timings/pyro_air/: __init__.py  air.py  visualization.py
experiments/table_4_objective_values/: genjax_cone.py  genjax_cone_marginal.py  numpyro_cone.py  pyro_cone.py
extras/: __init__.py  beta_implicit.py  sim_density.py
genjax/: PKG-INFO  README.md  pyproject.toml
genjax/src/genjax/: __init__.py  gensp.py  global_options.py  typing.py  vi.py
genjax/src/genjax/_src/: console.py  global_options.py
genjax/src/genjax/_src/core/: pretty_printing.py  runtime_debugger.py  state.py  typing.py
genjax/src/genjax/_src/core/datatypes/: address_tree.py  generative.py  masking.py  tagged_unions.py  trie.py
genjax/src/genjax/_src/core/interpreters/: README.md  context.py  primitives.py  propagate.py  staging.py
genjax/src/genjax/_src/core/pytree/: __init__.py  closure.py  pytree.py  static_checks.py  sumtree.py  utilities.py
genjax/src/genjax/_src/core/serialization/: backend.py  pickle.py
genjax/src/genjax/_src/core/transforms/: harvest.py  incremental.py
genjax/src/genjax/_src/generative_functions/: drop_arguments.py
genjax/src/genjax/_src/gensp/: choice_map_distribution.py  grasp.py  marginal.py  sp_distribution.py  target.py  utils.py
genjax/src/genjax/_src/inference/: importance_sampling.py  map_update.py  testbed.py  variational_inference.py
genjax/src/genjax/_src/information/: aide.py  eevi.py  sdos.py
genjax/src/genjax/core/: __init__.py  datatypes.py  incremental.py  pytree.py  runtime_debugger.py  serialization.py  state.py
genjax/src/genjax/generative_functions/: __init__.py
genjax/src/genjax/generative_functions/builtin/: __init__.py
genjax/src/genjax/generative_functions/combinators/: __init__.py
genjax/src/genjax/generative_functions/distributions/: __init__.py  custom.py
genjax/src/genjax/generative_functions/gentle/: __init__.py
genjax/src/genjax/inference/: __init__.py  importance_sampling.py  map_opt.py  mcmc.py  smc.py  testbed.py
notebooks/: extending_our_work.ipynb
presentation/animations/: air_animations_enum.ipynb
presentations/: ~$pldi_vi.pptx
tex_code/: inlined.aux  inlined.tex  problem.aux  problem.tex
tex_code/_minted-inlined/: B538394B5CBCF07AF268519DDAD8A04677CAA280BE236414C63A71BA0611483B.pygtex
tex_code/_minted-problem/: 13B124F8C7D329B24736C47657ABFCA4565EE8CE5FD99567E0ACF6BF3424ABBF.pygtex  475CD374FEC05E8397DCFAC353EADD99565EE8CE5FD99567E0ACF6BF3424ABBF.pygtex  706A64F0737C0195FFE23DCCD573E726565EE8CE5FD99567E0ACF6BF3424ABBF.pygtex  AD9868013300074E3F50636A30ABAE8D565EE8CE5FD99567E0ACF6BF3424ABBF.pygtex  C45C35A5E30B1BCD0274CE2EF9C1B81A565EE8CE5FD99567E0ACF6BF3424ABBF.pygtex
(+33 files in other folders)
