[tool.poetry]
name = "adevjax"
version = "0.0.1"
description = ""
authors = ["McCoy R. Becker <mccoyb@mit.edu>", "Mathieu Huot <huot@crans.org>", "Alex Lew <alexlew@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jax = "^0.4.20"
rich = "^13.7.0"
beartype = "^0.16.4"
jaxtyping = "^0.2.23"
plum-dispatch = "^2.2.2"
tensorflow-probability = "^0.21.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"
coverage = "^7.0.0"
mypy = "^0.991"
pytest-benchmark = "^4.0.0"
pytest-xdist = {version = "^3.2.0", extras = ["psutil"] }
autoflake8 = "^0.4.0"
isort = "^5.11.3"
xdoctest = "^1.1.0"
safety = "^2.3.5"
darglint = "^1.8.1"
jupyterlab = "^3.5.1"
docformatter = {version = "^1.5.1", extras = ["tomli"]}
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
omit = [".*", "*/site-packages/*"]

[tool.coverage.report]
show_missing = true
fail_under = 45

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
